CHANGES
~~~~~~~

1.3.1 (UNRELEASED)
==================

* Reduce dependency on ``zope.app.*`` packages
* Allow advisors to view person info (https://launchpad.net/bugs/513064)
* Flag to disable mail server (https://bugs.launchpad.net/schooltool/+bug/513026)

1.3.0 (2010-01-06)
==================

* Port to zope versions available in karmic https://launchpad.net/bugs/498803
* Update translations


1.2.1 (2009-12-29)
==================

* Automatic plugin inclusion using z3c.autoinclude
* Many build improvements by Justas and Gediminas
* Code cleanup

Bug fixes
---------

* Traceback trying to view student's contacts
  https://launchpad.net/bugs/475586
* Section scheduling view now returns to section on save
  https://launchpad.net/bugs/485616
* Removed Timetables link from section context, https://launchpad.net/bugs/485617

Translations
------------

* Many i18n fixes by Douglas and Gediminas
* Update translations


1.2.0 (2009-11-04)
==================

New Features
------------

* A way to enter contact information of users themselves (as opposed to
  external contacts) https://launchpad.net/bugs/381158

* Outgoing email support for interventions (sent either via specified
  SMTP server or your Gmail account).
  https://launchpad.net/bugs/417029,
  https://launchpad.net/bugs/417101,
  https://launchpad.net/bugs/425759

SchoolTool security
-------------------

* An overview page of user permissions (access rights) in SchoolTool.
  https://launchpad.net/bugs/381698
  (Only SchoolTool core permissions listed - Gradebook, Attendance/Journal
  and Interventions are soon to follow)

* Refined some of the rougher access permission corners, tightened
  permissions where needed.

Bug fixes
---------

* Much better SchoolTool translatability coverage.

* Failed to create sections that span multiple terms.
  https://bugs.launchpad.net/bugs/427321

* Crufty section name display for section.
  https://launchpad.net/bugs/394388


1.0.3 (2009-07-07)
==================
